Fix instruction screen overflowing on mobile

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -270,7 +270,7 @@ button,
 .box {
   border: 1px solid;
   border-radius: 5px;
-  height: 300px;
+  min-height: 300px;
   background-color: var(--primary-bg-color);
 }
 
